--- a/src/components/ReelPlaceholder.astro
+++ b/src/components/ReelPlaceholder.astro
@@ -92,7 +92,7 @@ const stills = frontmatter.reel.placeholderStills
     position: relative;
     width: 100%;
     height: 100%;
-    // overflow: hidden;
+    overflow: hidden;
   }
 
   .slide {
