--- a/src/components/ReelPlaceholder.astro
+++ b/src/components/ReelPlaceholder.astro
@@ -104,18 +104,18 @@ const stills = frontmatter.reel.placeholderStills
     width: 100%;
     height: auto;
     opacity: 0;
-    filter: blur(2em);
+    // filter: blur(2em);
     transition: opacity 1.5s, filter 1.5s;
     // box-shadow: 0 8px 96px 48px rgb(0, 0, 0, 1)
 
     &.intro {
       opacity: 1;
-      filter: blur(0);
+      // filter: blur(0);
     }
 
     &.outro {
       opacity: 0;
-      filter: blur(2em);
+      // filter: blur(2em);
     }
   }
 </style>
