wip - reel slideshow mostly complete (not clickable)

--- a/src/components/ProjectSets.astro
+++ b/src/components/ProjectSets.astro
@@ -73,7 +73,8 @@ h4 {
 }
 
 article {
-  margin-bottom: clamp(2.25em, 4vw, 4em)
+  margin-bottom: 3.5em;
+  // margin-bottom: clamp(3.25em, 4vw, 4em)
 }
 
 article a:focus{
