--- a/src/components/ScrollButton.astro
+++ b/src/components/ScrollButton.astro
@@ -53,7 +53,7 @@ const reverseClassName = 'reverse'
   }
 </style>
 
-<script is:inline define:vars={{ targetId, scrollLabel, buttonId, reverseClassName }}>
+<script define:vars={{ targetId, scrollLabel, buttonId, reverseClassName }}>
   const scrollDown = (e) => {
     e.preventDefault() // don't update URL hash
 
