--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,23 +11,25 @@ const colorThemeVerticalRule = site.themeColors.verticalRule
 ---
 
 <Layout>
-  <div class="initial-view">
-    <header class="landing">
-      <h1>{site.name}</h1>
-      <h2>{site.title}</h2>
-    </header>
-
-    <ReelPlaceholder />
-
-    <!-- <div class="bleed video-fade-in">
-      <VimeoPlayer url={site.reel.vimeoUrl} />
-    </div> -->
-
-    <div class="align-r scroller-fade-in" style="padding-top: 1rem;">
-      <ScrollButton targetId="first-section" />
+  <div class="section top">
+    <div class="initial-view">
+      <header class="landing">
+        <h1>{site.name}</h1>
+        <h2>{site.title}</h2>
+      </header>
+      
+      <ReelPlaceholder />
+      
+      <!-- <div class="bleed video-fade-in">
+        <VimeoPlayer url={site.reel.vimeoUrl} />
+      </div> -->
+      
+      <div class="align-r scroller-fade-in" style="padding-top: 1rem;">
+        <ScrollButton targetId="first-section" />
+      </div>
     </div>
   </div>
-
+    
   <main class="landing">
     <ProjectSets />
     <AboutSection />
@@ -37,5 +39,5 @@ const colorThemeVerticalRule = site.themeColors.verticalRule
 <style is:global define:vars={{ colorThemeVerticalRule }}>
 :root {
   --color-vertical-rule: var(--colorThemeVerticalRule);
-}  
+}
 </style>
