--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,8 +19,8 @@
 
   --margin-body-top: clamp(
     1rem,
-    6.4vw,
-    2rem
+    4vh,
+    3rem
   );
   --margin-body-bottom: var(--margin-body-top);
   --margin-body-h: clamp(
@@ -30,7 +30,8 @@
   );
   --margin-h-inset: var(--margin-body-h);
 
-  --max-element-width: 96rem;
+  --max-content-column-width: 48rem;
+  --max-element-width: 108rem;
 
   --scroll-button-diameter: 2.75em;
 
@@ -38,7 +39,7 @@
   font-size: clamp(
     1rem,
     0.5rem + 1.0309vw,
-    1.125rem
+    1.0625rem
   );
   font-weight: 400;
   font-optical-sizing: auto;
@@ -62,10 +63,12 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   padding: 0 var(--margin-body-h) var(--margin-body-bottom);
   width: 100%;
   margin: 0 auto;
-  max-width: 48rem;
+  max-width: var(--max-content-column-width);
   min-height: 100vh;
 }
 
@@ -113,7 +116,9 @@ a {
 
 header.landing {
   padding-bottom: 0.75em;
-  background-color: var(--color-bg);
+  // background-color: var(--color-bg);
+  // background-color: yellow;
+  // mix-blend-mode: color;
 
   h1, h2 {
     font-size: 1em;
@@ -213,31 +218,94 @@ body.home {
   position: relative;
 
   main.landing {
-    padding-bottom: 8rem;
+    // padding-bottom: 8rem;
+
+    // Backdrop that obscures rotating thumbnail backgrounds as you scroll down page
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100vw;
+      height: 100%;
+      background: linear-gradient(
+        to bottom,
+        rgb(0 0 0 / 0) 10%,
+        rgb(0 0 0 / 55%) 16%
+      );
+      // background: orange;
+      z-index: -1;
+    }
   }
 
   // vertical rule
+  // &::before {
+  //   content: '';
+  //   position: absolute;
+  //   z-index: -1;
+  //   top: var(--margin-body-top);
+  //   left: calc(var(--margin-body-h) + 2px);
+  //   width: 0.5px;
+  //   height: 100%;
+  //   background-color: var(--color-vertical-rule);
+
+  //   @media (prefers-reduced-motion: no-preference) {
+  //     transform: scaleY(0);
+  //     transform-origin: 0 0;
+  //     animation-name: scaleY;
+  //     animation-delay: 2s;
+  //     animation-duration: 1s;
+  //     animation-fill-mode: forwards;
+  //     animation-timing-function: ease-in-out;
+  //   }
+  // }
+}
+
+.section {
+  position: relative;
+  // vertical rule
+  // border: 2px solid turquoise;
+  // border-top: 2px solid salmon;
+
+
   &::before {
     content: '';
     position: absolute;
     z-index: -1;
-    top: var(--margin-body-top);
-    left: calc(var(--margin-body-h) + 2px);
+    top: calc(4.95em);
+    // top: 0;
+    // left: calc(var(--margin-body-h) + 2px);
+    left: 2px;
     width: 0.5px;
-    height: 100%;
+    height: calc(100%);
+    // height: 100%;
     background-color: var(--color-vertical-rule);
+    mix-blend-mode: lighten;
+  }
+
+  &.top::before {
+    top: calc(var(--margin-body-top) + 3.75em);
+    height: calc(100% - var(--margin-body-top) - 2.35em);
 
     @media (prefers-reduced-motion: no-preference) {
       transform: scaleY(0);
       transform-origin: 0 0;
       animation-name: scaleY;
       animation-delay: 2s;
-      animation-duration: 1s;
+      animation-duration: 1.5s;
       animation-fill-mode: forwards;
       animation-timing-function: ease-in-out;
     }
   }
 
+  &:last-of-type {
+    padding-bottom: 8rem;
+
+    &::before {
+      height: calc(100% + 2.5rem);
+    }
+  }
 }
 
 .landing .section {
@@ -248,7 +316,7 @@ body.home {
 .landing h3 {
   margin-left: calc(-1 * var(--margin-h-inset));
   margin-bottom: 3rem;
-  background-color: var(--color-bg);
+  // background-color: var(--color-bg);
 }
 
 .align-r {
