wip: eliminate band behind reel slideshow

--- a/src/components/ReelPlaceholder.astro
+++ b/src/components/ReelPlaceholder.astro
@@ -98,22 +98,22 @@ const stills = frontmatter.reel.placeholderStills
   }
 
   // backdrop bleeding left and right
-  .slideshow::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100vw;
-    background: rgb(255, 255, 255, 0.03);
-    // background-image: var(--bg-img);
-    // background-size: cover;
-    // filter: blur(1em);
-    // overflow: hidden;
-    // opacity: 0.5;
-    height: 100%;
-    z-index: 0;
-  }
+  // .slideshow::before {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   left: 50%;
+  //   transform: translateX(-50%);
+  //   width: 100vw;
+  //   background: rgb(255, 255, 255, 0.03);
+  //   // background-image: var(--bg-img);
+  //   // background-size: cover;
+  //   // filter: blur(1em);
+  //   // overflow: hidden;
+  //   // opacity: 0.5;
+  //   height: 100%;
+  //   z-index: 0;
+  // }
 
   .slide-container {
     position: relative;
@@ -225,7 +225,7 @@ const stills = frontmatter.reel.placeholderStills
   }
 
   .play-button-icon {
-    transform: translateX(10%);
+    // transform: translateX(10%);
     width: 1.25em;
     height: 1.25em;
     // opacity: 0.5;
