ui: increase opacity in bg images behind reel per Drew
Also remove commented code.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -232,7 +232,8 @@ body.home {
       background: linear-gradient(
         to bottom,
         rgb(0 0 0 / 0) 10%,
-        rgb(0 0 0 / 55%) 16%
+        rgb(0 0 0 / 40%) 15%,
+        rgb(0 0 0 / 60%) 20%
       );
       // background: orange;
       z-index: -1;
@@ -281,12 +282,13 @@ body.home {
     height: calc(100%);
     // height: 100%;
     background-color: var(--color-vertical-rule);
-    mix-blend-mode: lighten;
+    mix-blend-mode: screen;
   }
 
   &.top::before {
     top: calc(var(--margin-body-top) + 3.75em);
     height: calc(100% - var(--margin-body-top) - 2.35em);
+    // mix-blend-mode: hard-light;
 
     @media (prefers-reduced-motion: no-preference) {
       transform: scaleY(0);
