--- a/src/components/ReelPlaceholder.astro
+++ b/src/components/ReelPlaceholder.astro
@@ -47,7 +47,6 @@ const stills = frontmatter.reel.placeholderStills
   const advanceSlideshow = () => {
     const thisSlide = slides[i % slides.length]
     const thisSlideBg = slideBgs[i % slides.length]
-    // slideshow.style.setProperty('--bg-img', `url(${thisSlide.src})`)
 
     // Start in-transition
     thisSlide.style.visibility = 'visible'
@@ -79,11 +78,6 @@ const stills = frontmatter.reel.placeholderStills
 </script>
 
 <style lang="scss">
-  // .slideshow-container {
-  //   border: 1px solid white;
-  //   position: relative;
-  // }
-
   .slideshow {
     position: relative;
     margin: 0;
@@ -97,30 +91,11 @@ const stills = frontmatter.reel.placeholderStills
     align-self: center; 
   }
 
-  // backdrop bleeding left and right
-  // .slideshow::before {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0;
-  //   left: 50%;
-  //   transform: translateX(-50%);
-  //   width: 100vw;
-  //   background: rgb(255, 255, 255, 0.03);
-  //   // background-image: var(--bg-img);
-  //   // background-size: cover;
-  //   // filter: blur(1em);
-  //   // overflow: hidden;
-  //   // opacity: 0.5;
-  //   height: 100%;
-  //   z-index: 0;
-  // }
-
   .slide-container {
     position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
-    // box-shadow: 0 8px 96px -24px rgba(0, 0, 0, 0.5);
   }
 
   .slide {
@@ -132,20 +107,16 @@ const stills = frontmatter.reel.placeholderStills
     width: 100%;
     height: auto;
     opacity: 0;
-    // filter: blur(2em);
     transition: opacity 1.5s;
     z-index: 2;
 
     &.intro {
       opacity: 1;
-      // filter: blur(0);
     }
     
     &.outro {
-      // transition: opacity 0s;
       opacity: 1;
       z-index: -1;
-      // filter: blur(2em);
     }
   }
 
@@ -156,47 +127,20 @@ const stills = frontmatter.reel.placeholderStills
     left: 50%;
     transform: translateX(-50%);
     width: 100vw;
-    // background: rgb(20 20 20);
-    // background: var(--test-color);
-    // background-image: var(--bg-img);
-    // background-size: cover;
-    // filter: blur(1em);
-    // overflow: hidden;
-    // opacity: 0.5;
     height: 100%;
-
-
     object-fit: cover;
     z-index: -10;
     filter: blur(8em) saturate(2);
     opacity: 0;
-    // overflow: hidden;
-
     transition: opacity 3s linear;
-    // box-shadow: 0 8px 96px 48px rgb(0, 0, 0, 1)
 
     &.intro {
-      opacity: 0.325;
-      // z-index: 1;
-      // filter: blur(0);
+      opacity: 0.5;
     }
 
     &.outro {
-      // z-index: -1;
-      // opacity: 0;
-      // filter: blur(2em);
     }
   }
-
-  // .play-button-container {
-  //   position: absolute;
-  //   width: 100%;
-    // max-width: var(--max-content-column-width);
-    // padding: 0 var(--margin-body-h);
-  //   left: 50%;
-  //   transform: translateX(-50%);
-  //   z-index: 3;
-  // }
 
   .slideshow:hover {
     cursor: pointer;
@@ -213,22 +157,16 @@ const stills = frontmatter.reel.placeholderStills
     display: flex;
     padding: 0.825em;
     border-radius: 999px;
-    // filter: drop-shadow(0 2em 2em rgb(0 0 0 / 50%));
-    transition: opacity 0.5s linear, background-color 0.5s linear;
-    // mix-blend-mode: exclusion;
+    transition: opacity 0.25s ease-out, background-color 0.25s ease-out;
     
     .slideshow:hover & {
-      // filter: drop-shadow(0 2em 3em rgb(0 0 0 / 75%));
       background-color: rgb(0 0 0 / 40%);
       opacity: 1;
     }
   }
 
   .play-button-icon {
-    // transform: translateX(10%);
     width: 1.25em;
     height: 1.25em;
-    // opacity: 0.5;
   }
-
 </style>
