--- a/src/components/VimeoPlayer.astro
+++ b/src/components/VimeoPlayer.astro
@@ -12,7 +12,10 @@ const id = url.toString().includes('/') // check if it's an URL
   : url
 ---
 
-<div style="padding:56.25% 0 0 0; position:relative;">
+<div style="
+  padding:56.25% 0 0 0;
+  position:relative;
+">
   <iframe
     src={
       `https://player.vimeo.com/video/${id}`
