--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -39,6 +39,8 @@ import '../styles/global.scss';
     <Monogram />
     <p>&copy; {metadata.name}</p>
   </footer>
+
+  <script src="https://player.vimeo.com/api/player.js"></script>
 </body>
 </html>
 
