wip: optimize slideshow
- reduce image res for slideshow bg images to just 48px wide
- reduce image res for project set featured stills to max-width 1280px
- temporarily remove bg gradient

--- a/src/components/ProjectSets.astro
+++ b/src/components/ProjectSets.astro
@@ -3,6 +3,8 @@ import { frontmatter as projectData } from '../content/Projects.md'
 import Markdown from './Markdown.astro'
 import ProjectModal from './ProjectModal.astro'
 import { imagePath } from '../settings/siteInfo'
+
+const cloudinaryFeaturedStillTransforms = '/c_limit,w_1280'
 ---
 
 {projectData.projectSets.map((projectSet, i) => (
@@ -15,7 +17,7 @@ import { imagePath } from '../settings/siteInfo'
           <div class="bleed-r">
             <img
               class="still bleed-r"
-              src={imagePath + project.featuredStill}
+              src={imagePath + cloudinaryFeaturedStillTransforms + project.featuredStill}
               alt=""
             />
           </div>
