--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -229,12 +229,12 @@ body.home {
       transform: translateX(-50%);
       width: 100vw;
       height: 100%;
-      background: linear-gradient(
-        to bottom,
-        rgb(0 0 0 / 0) 10%,
-        rgb(0 0 0 / 40%) 15%,
-        rgb(0 0 0 / 60%) 20%
-      );
+      // background: linear-gradient(
+      //   to bottom,
+      //   rgb(0 0 0 / 0) 10%,
+      //   rgb(0 0 0 / 40%) 15%,
+      //   rgb(0 0 0 / 60%) 20%
+      // );
       // background: orange;
       z-index: -1;
     }
