ui: make 'Director of Photography' transparent

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const colorThemeVerticalRule = site.themeColors.verticalRule
     <div class="initial-view">
       <header class="landing">
         <h1>{site.name}</h1>
-        <h2>{site.title}</h2>
+        <h2 style="color: rgb(255 255 255 / 50%)">{site.title}</h2>
       </header>
       
       <ReelPlaceholder />
