style: remove unnec. semicolon

--- a/src/components/ProjectModal.astro
+++ b/src/components/ProjectModal.astro
@@ -1,6 +1,6 @@
 ---
 import BaseModal from './BaseModal.astro'
-import VimeoPlayer from './VimeoPlayer.astro';
+import VimeoPlayer from './VimeoPlayer.astro'
 import { imagePath } from '../settings/siteInfo'
 import Markdown from './Markdown.astro'
 
