--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -63,6 +63,11 @@ html {
 }
 
 body {
+  margin: 0;
+  min-height: 100vh;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   padding: 0 var(--margin-body-h) var(--margin-body-bottom);
@@ -239,48 +244,19 @@ body.home {
       z-index: -1;
     }
   }
-
-  // vertical rule
-  // &::before {
-  //   content: '';
-  //   position: absolute;
-  //   z-index: -1;
-  //   top: var(--margin-body-top);
-  //   left: calc(var(--margin-body-h) + 2px);
-  //   width: 0.5px;
-  //   height: 100%;
-  //   background-color: var(--color-vertical-rule);
-
-  //   @media (prefers-reduced-motion: no-preference) {
-  //     transform: scaleY(0);
-  //     transform-origin: 0 0;
-  //     animation-name: scaleY;
-  //     animation-delay: 2s;
-  //     animation-duration: 1s;
-  //     animation-fill-mode: forwards;
-  //     animation-timing-function: ease-in-out;
-  //   }
-  // }
 }
 
 .section {
   position: relative;
-  // vertical rule
-  // border: 2px solid turquoise;
-  // border-top: 2px solid salmon;
-
 
   &::before {
     content: '';
     position: absolute;
     z-index: -1;
-    top: calc(4.95em);
-    // top: 0;
-    // left: calc(var(--margin-body-h) + 2px);
+    top: 4.95em;
     left: 2px;
     width: 0.5px;
-    height: calc(100%);
-    // height: 100%;
+    height: 100%;
     background-color: var(--color-vertical-rule);
     mix-blend-mode: screen;
   }
@@ -288,7 +264,6 @@ body.home {
   &.top::before {
     top: calc(var(--margin-body-top) + 3.75em);
     height: calc(100% - var(--margin-body-top) - 2.35em);
-    // mix-blend-mode: hard-light;
 
     @media (prefers-reduced-motion: no-preference) {
       transform: scaleY(0);
@@ -301,11 +276,11 @@ body.home {
     }
   }
 
-  &:last-of-type {
+  .landing &:last-of-type {
     padding-bottom: 8rem;
 
     &::before {
-      height: calc(100% + 2.5rem);
+      height: calc(100% + 3.25rem);
     }
   }
 }
@@ -318,7 +293,6 @@ body.home {
 .landing h3 {
   margin-left: calc(-1 * var(--margin-h-inset));
   margin-bottom: 3rem;
-  // background-color: var(--color-bg);
 }
 
 .align-r {
