ui: customize styling of bigger-picture's controls

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,6 +35,8 @@
 
   --scroll-button-diameter: 2.75em;
 
+  --modal-h-margin: 2rem;
+
   font-family: var(--font-accent);
   font-size: clamp(
     1rem,
