feat: update slideshow with custom color backdrops
Implement by sampling slideshow images for 'average color', and conditionally apply a vignette effect using an inset box shadow. (Set up to allow for hiding the vignette effect, though, because Chrome renders inset box shadows substantially differently from Safari.)

--- a/src/components/ProjectSets.astro
+++ b/src/components/ProjectSets.astro
@@ -48,7 +48,7 @@ projectData.projectSets.forEach(projectSet => {
           project.projectType ||
           projectSet.fallbackProjectTypeLabel
         }
-        client:visible
+        client:load
       />
     ))}
   </section>
