--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const colorThemeVerticalRule = site.themeColors.verticalRule
 
 <Layout>
   <div class="section top">
-    <div class="initial-view">
+    <div class="initial-view" data-initial-view>
       <header class="landing">
         <h1>{site.name}</h1>
         <h2 style="color: rgb(255 255 255 / 50%)">{site.title}</h2>
