ux: add No JS message

--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -33,6 +33,13 @@ import '../styles/global.scss';
 </head>
 
 <body class="home">
+  <noscript>
+    <p>
+      ⚠ This website requires JavaScript, but this browser has JavaScript disabled.
+      <a href="https://activatejavascript.org">Learn how to enable Javascript</a>.
+    </p>
+  </noscript>
+
   <div class="container">
     <slot />
 
