--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -69,6 +69,18 @@ body {
   min-height: 100vh;
 }
 
+noscript p {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: yellow;
+  color: black;
+  text-align: center;
+  font-weight: 500;
+  font-size: 1.125em;
+  padding: 2em;
+}
+
 .container {
   display: flex;
   flex-direction: column;
