feat: add meta description

--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -9,6 +9,7 @@ import '../styles/global.scss';
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <meta name="theme-color" content="#000000">
+  <meta name="description" content={metadata.description}>
   <title>{metadata.name} · {metadata.title}</title>
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
